--- a/package.json
+++ b/package.json
@@ -10,14 +10,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.18.1",
+    "@tanstack/react-query": "^4.29.12",
     "autoprefixer": "^10.4.14",
+    "axios": "^1.4.0",
     "postcss": "^8.4.24",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.2",
+    "recharts": "^2.6.2",
     "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
+    "@types/node": "^20.2.5",
+    "typescript": "^5.0.4",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^4.0.0",
@@ -25,6 +31,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
+    "react-error-overlay": "^6.0.11",
     "vite": "^4.3.9"
   }
 }
