--- a/package.json
+++ b/package.json
@@ -11,19 +11,21 @@
   },
   "dependencies": {
     "@react-google-maps/api": "^2.18.1",
+    "@reduxjs/toolkit": "^1.9.5",
     "@tanstack/react-query": "^4.29.12",
     "autoprefixer": "^10.4.14",
     "axios": "^1.4.0",
     "postcss": "^8.4.24",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.7",
     "react-router-dom": "^6.11.2",
     "recharts": "^2.6.2",
+    "redux": "^4.2.1",
     "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
     "@types/node": "^20.2.5",
-    "typescript": "^5.0.4",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^4.0.0",
@@ -32,6 +34,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "react-error-overlay": "^6.0.11",
+    "typescript": "^5.0.4",
     "vite": "^4.3.9"
   }
 }
